istio/virtual-services/kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: sample
  labels:
    istio-injection: enabled
spec:
  finalizers:
    - kubernetes
