istio/virtual-services/kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-deployment
  namespace: sample
spec:
  selector:
    matchLabels:
      app: sample-deployment
  template:
    metadata:
      labels:
        app: sample-deployment
    spec:
      containers:
        - name: sample-deployment
          image: 'nginx:1.19.2-alpine'
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
