istio/virtual-services/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-service
  namespace: sample
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: sample-deployment
