istio/virtual-services/kubernetes/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: sample-gateway
  namespace: sample
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: tls-continuousplatformcombr
        mode: SIMPLE
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
